--- a/states/California/maps/percent_normal_map.Rmd
+++ b/states/California/maps/percent_normal_map.Rmd
@@ -31,11 +31,45 @@ theme_set(theme_bw())
 
 library(maps)
 library(gridExtra)
+
+library(rgdal)
+```
+
+```{r, cache=TRUE}
+ca_spring_2018 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Spring_2018.csv")
+ca_summer_2018 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Summer_2018.csv")
+
+# lat-lon for each id 
+ca_gps = read.csv("spacial/ca_gps.csv")
 ```
 
 
-```{r}
+```{r, eval=TRUE}
+ca_spring_2015 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Spring_2015.csv")
+ca_summer_2015 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Summer_2015.csv")
+
+ca_spring_2016 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Spring_2016.csv")
+ca_summer_2016 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Summer_2016.csv")
+
+ca_spring_2017 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Spring_2017.csv")
+ca_summer_2017 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Summer_2017.csv")
+
+ca_spring_2018 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Spring_2018.csv")
+ca_summer_2018 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Summer_2018.csv")
+
+ca_spring_2019 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Spring_2019.csv")
+ca_summer_2019 = read.csv("/Users/willcarrara/Desktop/MISC/FAM_backup/FAM/California/output/California_Summer_2019.csv")
+
+# lat-lon for each id 
+ca_gps = read.csv("spacial/ca_gps.csv")
+```
+
+
+```{r, eval=FALSE}
 # data from the FAM outputs
+ca_spring_2015 = read.csv("../output/California_Spring_2015.csv")
+ca_summer_2015 = read.csv("../output/California_Summer_2015.csv")
+
 ca_spring_2016 = read.csv("../output/California_Spring_2016.csv")
 ca_summer_2016 = read.csv("../output/California_Summer_2016.csv")
 
@@ -53,26 +87,28 @@ ca_gps = read.csv("spacial/ca_gps.csv")
 ```
 
 
-```{r}
+```{r, cache=TRUE}
 process = function(fam_output) {
   # add lat lon 
   fam_output$lat = ca_gps$lat
   fam_output$lon = ca_gps$lon
   
   # take only postive values
-  fam_output = fam_output[fam_output$percent_5yr_Avg >= 0 & fam_output$percent_5yr_Avg <= 350,] 
-  
-  # create bins
-  fam_output$bin  <- cut(fam_output$percent_5yr_Avg, breaks=c(0,20,40,60,80,100,120), labels=c("20","40","60","80","100","120"))
-  fam_output$bin = as.numeric(as.character(fam_output$bin))
+  fam_output = fam_output[fam_output$percent_5yr_Avg >= 0 & fam_output$percent_5yr_Avg < 400,] 
   
   # add dummy group column for plotting
-  fam_output$group = 7 
+  fam_output$group = -1
   
+  # add breaks
+  fam_output$bin = cut(fam_output$percent_5yr_Avg, breaks = c(0,60,80,max(fam_output$percent_5yr_Avg)), labels=c("0-60", "60-80","80-max"))
+
   return(fam_output)
 }
 
 # create new dataframe 
+ca_spring_2015 = process(ca_spring_2015)
+ca_summer_2015 = process(ca_summer_2015)
+
 ca_spring_2016 = process(ca_spring_2016)
 ca_summer_2016 = process(ca_summer_2016)
 
@@ -116,33 +152,140 @@ plotter= function(fam_output_spring, fam_output_summer, state_df, county_df, yea
   # spring season
   ca_spring <- ggplot(data=state_df, aes(x=long, y=lat, group=group)) + coord_fixed(1.33) + ggtitle(paste("Spring", year)) +
   geom_polygon(color="black", fill="gray") + geom_polygon(data=county_df, fill=NA, color="white") +
-  geom_point(data=fam_output_spring, aes(x=lon, y=lat, colour=bin), shape = ".", show.legend=TRUE) +
+  geom_point(data=fam_output_spring, aes(x=lon, y=lat, colour=percent_5yr_Avg), shape=".", show.legend=TRUE) +
   geom_polygon(color="black", fill=NA) + ditch_the_axes + 
-  scale_color_gradient2(low="orange4", high="forestgreen", midpoint=75, mid="khaki", name="% normal")
+  scale_color_gradient2(low="orange4", high="forestgreen", mid="khaki", midpoint=50, name="Percent Normal", breaks=c(.5,25,50,75,100), labels=c("0","25","50","75","100"), limits=c(0, 115), na.value = "chartreuse4")
+  
+  #ggsave(paste0("Spring_", year, ".png"), dpi=1200)
   
   # summer season
   ca_summer <- ggplot(data=state_df, aes(x=long, y=lat, group=group)) + coord_fixed(1.33) + ggtitle(paste("Summer", year)) +
   geom_polygon(color="black", fill="gray") + geom_polygon(data=county_df, fill=NA, color="white") +
-  geom_point(data=fam_output_summer, aes(x=lon, y=lat, colour=bin), shape = ".", show.legend=TRUE) +
+  geom_point(data=fam_output_summer, aes(x=lon, y=lat, colour=percent_5yr_Avg), shape=".", show.legend=TRUE) +
   geom_polygon(color="black", fill=NA) + ditch_the_axes + 
-  scale_color_gradient2(low="orange4", high="forestgreen", midpoint=75, mid="khaki", name="% normal")
+  scale_color_gradient2(low="orange4", high="forestgreen", mid="khaki", midpoint=50, name="Percent Normal", breaks=c(.5,25,50,75,100), labels=c("0","25","50","75","100"), limits=c(0, 115), na.value = "chartreuse4")
+  
+  #ggsave(paste0("Summer_", year, ".png"), dpi=1200)
   
   # side by side plot
   grid.arrange(ca_spring, ca_summer, ncol=2)
+
 }
 ```
 
 
 ```{r fig.width=18, fig.asp=.5}
+# 2015
+#plotter(ca_spring_2015, ca_summer_2015, ca_df, ca_county, "2015")
+
 # 2016
-plotter(ca_spring_2016, ca_summer_2016, ca_df, ca_county, "2016")
+#plotter(ca_spring_2016, ca_summer_2016, ca_df, ca_county, "2016")
 
 # 2017
-plotter(ca_spring_2017, ca_summer_2017, ca_df, ca_county, "2017")
+#plotter(ca_spring_2017, ca_summer_2017, ca_df, ca_county, "2017")
 
 # 2018
-plotter(ca_spring_2018, ca_summer_2018, ca_df, ca_county, "2018")
+#plotter(ca_spring_2018, ca_summer_2018, ca_df, ca_county, "2018")
 
 # 2019
-plotter(ca_spring_2019, ca_summer_2019, ca_df, ca_county, "2019")
+#plotter(ca_spring_2019, ca_summer_2019, ca_df, ca_county, "2019")
+```
+
+
+
+```{r, fig.width=18, fig.asp=.5}
+path = "/Users/willcarrara/Downloads/cb_2018_06_sldl_500k/cb_2018_06_sldl_500k.shp"
+shp <- readOGR(path)
+ca_shp = spTransform(shp, CRS("+proj=longlat +ellps=WGS84 +datum=WGS84"))
+
+# plotting function
+plotter2= function(fam_output_spring, fam_output_summer, year) {
+  
+   # spring season
+   ca_spring <- ggplot(data=ca_shp, aes(x=long, y=lat, group=group)) + coord_fixed(1.33) + ggtitle(paste("Spring", year)) +
+   geom_polygon(color="gray25", fill=alpha("#2E4053",.65)) + ditch_the_axes + 
+   geom_point(data=fam_output_spring, aes(x=lon, y=lat, colour=bin), shape=".", show.legend=TRUE) +
+   scale_colour_manual(values=c("orange4", "khaki", "forestgreen"), na.translate = F) + 
+  guides(colour = guide_legend(override.aes=list(shape=15, size=7), title="Percent Normal"))
+    
+  
+  #ggsave(paste0("Spring_", year, ".png"), dpi=1200)
+  
+  # summer season
+   ca_summer <- ggplot(data=ca_shp, aes(x=long, y=lat, group=group)) + coord_fixed(1.33) + ggtitle(paste("Summer", year)) +
+   geom_polygon(color="gray25", fill=alpha("#2E4053",.65)) + ditch_the_axes + 
+   geom_point(data=fam_output_summer, aes(x=lon, y=lat, colour=percent_5yr_Avg), shape=".", show.legend=TRUE) +
+   scale_color_gradient2(low="orange4", high="forestgreen", mid="khaki", midpoint=50, name="Percent Normal", breaks=c(.5,25,50,75,100), labels=c("0","25","50","75","100"), limits=c(0, 115), na.value="chartreuse4")
+  
+  #ggsave(paste0("Summer_", year, ".png"), dpi=1200)
+  
+  # side by side plot
+  grid.arrange(ca_spring, ca_summer, ncol=2)
+}
+
+# 2015
+#plotter2(ca_spring_2015, ca_summer_2015, "2015")
+
+# 2016
+#plotter2(ca_spring_2016, ca_summer_2016, "2016")
+
+# 2017
+#plotter2(ca_spring_2017, ca_summer_2017, "2017")
+
+# 2018
+#plotter2(ca_spring_2018, ca_summer_2018, "2018")
+
+# 2019
+#plotter2(ca_spring_2019, ca_summer_2019, "2019")
+```
+
+```{r, fig.width=18, fig.asp=.5}
+path = "/Users/willcarrara/Downloads/cb_2018_06_sldl_500k/cb_2018_06_sldl_500k.shp"
+shp <- readOGR(path)
+ca_shp = spTransform(shp, CRS("+proj=longlat +ellps=WGS84 +datum=WGS84"))
+
+low =  alpha("orange4",.7)
+mid =  alpha("khaki",.7)
+high =  alpha("forestgreen",.7)
+
+# plotting function
+plotter3 = function(fam_output_spring, fam_output_summer, year) {
+  
+   # spring season
+   ca_spring <- ggplot(data=ca_shp, aes(x=long, y=lat, group=group)) + coord_fixed(1.33) + ggtitle(paste("Spring", year)) +
+   geom_polygon(color="gray25", fill=alpha("#2E4053",.65)) + ditch_the_axes + 
+   geom_point(data=fam_output_spring, aes(x=lon, y=lat, colour=bin), shape=".", show.legend=TRUE) +
+   scale_colour_manual(values=c(low, mid, high), na.translate = F) + 
+  guides(colour = guide_legend(override.aes=list(shape=15, size=7), title="Percent Normal"))
+    
+  
+  #ggsave(paste0("Spring_", year, ".png"), dpi=1200)
+  
+  # summer season
+   ca_summer <- ggplot(data=ca_shp, aes(x=long, y=lat, group=group)) + coord_fixed(1.33) + ggtitle(paste("Summer", year)) +
+   geom_polygon(color="gray25", fill=alpha("#2E4053",.65)) + ditch_the_axes + 
+   geom_point(data=fam_output_summer, aes(x=lon, y=lat, colour=bin), shape=".", show.legend=TRUE) +
+   scale_colour_manual(values=c("orange4", "khaki", "forestgreen"), na.translate = F) + 
+  guides(colour = guide_legend(override.aes=list(shape=15, size=7), title="Percent Normal"))
+  
+  #ggsave(paste0("Summer_", year, ".png"), dpi=1200)
+  
+  # side by side plot
+  grid.arrange(ca_spring, ca_summer, ncol=2)
+}
+
+# 2015
+plotter3(ca_spring_2015, ca_summer_2015, "2015")
+
+# 2016
+plotter3(ca_spring_2016, ca_summer_2016, "2016")
+
+# 2017
+plotter3(ca_spring_2017, ca_summer_2017, "2017")
+
+# 2018
+plotter3(ca_spring_2018, ca_summer_2018, "2018")
+
+# 2019
+plotter3(ca_spring_2019, ca_summer_2019, "2019")
 ```
